# SoundCube_ESP32

./: README.md
soundcube_base/: README.md  sdkconfig  sdkconfig.defaults
soundcube_base/main/: CMakeLists.txt  button.c  button.h  console.c  console.h  equalizer.c  equalizer.h  es8388_init.c  es8388_init.h  main.c  storage.c  storage.h
