if(CONFIG_EXAMPLE_A2DP_SINK_USE_EXTERNAL_CODEC)
    set(EXTRA_COMPONENTS a2dp_sink_ext_codec_utils)
else()
    set(EXTRA_COMPONENTS a2dp_sink_int_codec_utils)
endif()

idf_component_register(SRCS "main.c" "es8388_init.c"
                    PRIV_REQUIRES bt bt_app_core_utils bredr_app_common_utils a2dp_sink_common_utils
                    PRIV_REQUIRES ${EXTRA_COMPONENTS} esp_driver_i2c
                    INCLUDE_DIRS ".")
